test_src/compiler_errors/types/binary/UnsignedRightShiftFloatError1.b
class UnsignedRightShiftFloatError1 {
    void test() {
        println(14.0 >>> 42);
    }
}
